# generic-inspection

./: .gitignore  Justfile  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
src/generic_inspection/: __init__.py
tests/: test_get_generic_params.py  test_infer_generic_args.py
tests/py311/: __init__.py  test_get_generic_params.py  test_infer_generic_args.py
tests/py312/: __init__.py  test_infer_generic_args.py
